--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,7 +1,11 @@
+amqp==2.5.2
 astroid==2.3.3
 autopep8==1.5
 evdev==1.3.0
+hiredis==1.0.1
+importlib-metadata==1.5.0
 isort==4.3.21
+kombu==4.6.7
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pkg-resources==0.0.0
@@ -12,4 +16,6 @@ PyYAML==5.3
 redis==3.3.11
 six==1.14.0
 typed-ast==1.4.1
+vine==1.3.0
 wrapt==1.11.2
+zipp==2.1.0
